deploy: 893963df0ad8596034522cd18570517f823d7123

--- a/master/print.html
+++ b/master/print.html
@@ -1126,19 +1126,19 @@ over it and is merged into the default palette.</p>
 <tr><td><code>ui.cursor.select</code></td><td></td></tr>
 <tr><td><code>ui.cursor.match</code></td><td>Matching bracket etc.</td></tr>
 <tr><td><code>ui.cursor.primary</code></td><td>Cursor with primary selection</td></tr>
-<tr><td><code>ui.linenr</code></td><td></td></tr>
-<tr><td><code>ui.linenr.selected</code></td><td></td></tr>
+<tr><td><code>ui.linenr</code></td><td>Line numbers</td></tr>
+<tr><td><code>ui.linenr.selected</code></td><td>Line number for the line the cursor is on</td></tr>
 <tr><td><code>ui.statusline</code></td><td>Statusline</td></tr>
 <tr><td><code>ui.statusline.inactive</code></td><td>Statusline (unfocused document)</td></tr>
-<tr><td><code>ui.popup</code></td><td></td></tr>
-<tr><td><code>ui.popup.info</code></td><td></td></tr>
-<tr><td><code>ui.window</code></td><td></td></tr>
-<tr><td><code>ui.help</code></td><td></td></tr>
-<tr><td><code>ui.text</code></td><td></td></tr>
+<tr><td><code>ui.popup</code></td><td>Documentation popups (e.g space-k)</td></tr>
+<tr><td><code>ui.popup.info</code></td><td>Prompt for multiple key options</td></tr>
+<tr><td><code>ui.window</code></td><td>Border lines separating splits</td></tr>
+<tr><td><code>ui.help</code></td><td>Description box for commands</td></tr>
+<tr><td><code>ui.text</code></td><td>Command prompts, popup text, etc.</td></tr>
 <tr><td><code>ui.text.focus</code></td><td></td></tr>
-<tr><td><code>ui.text.info</code></td><td></td></tr>
-<tr><td><code>ui.menu</code></td><td></td></tr>
-<tr><td><code>ui.menu.selected</code></td><td></td></tr>
+<tr><td><code>ui.text.info</code></td><td>The key: command text in <code>ui.popup.info</code> boxes</td></tr>
+<tr><td><code>ui.menu</code></td><td>Code and command completion menus</td></tr>
+<tr><td><code>ui.menu.selected</code></td><td>Selected autocomplete item</td></tr>
 <tr><td><code>ui.selection</code></td><td>For selections in the editing area</td></tr>
 <tr><td><code>ui.selection.primary</code></td><td></td></tr>
 <tr><td><code>warning</code></td><td>Diagnostics warning (gutter)</td></tr>
