--- a/master/print.html
+++ b/master/print.html
@@ -1203,7 +1203,11 @@ over it and is merged into the default palette.</p>
 <tr><td><code>error</code></td><td>Diagnostics error (gutter)</td></tr>
 <tr><td><code>info</code></td><td>Diagnostics info (gutter)</td></tr>
 <tr><td><code>hint</code></td><td>Diagnostics hint (gutter)</td></tr>
-<tr><td><code>diagnostic</code></td><td>For text in editing area</td></tr>
+<tr><td><code>diagnostic</code></td><td>Diagnostics fallback style (editing area)</td></tr>
+<tr><td><code>diagnostic.hint</code></td><td>Diagnostics hint (editing area)</td></tr>
+<tr><td><code>diagnostic.info</code></td><td>Diagnostics info (editing area)</td></tr>
+<tr><td><code>diagnostic.warning</code></td><td>Diagnostics warning (editing area)</td></tr>
+<tr><td><code>diagnostic.error</code></td><td>Diagnostics error (editing area)</td></tr>
 </tbody></table>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="key-remapping"><a class="header" href="#key-remapping">Key Remapping</a></h1>
 <p>One-way key remapping is temporarily supported via a simple TOML configuration
