deploy: bfc4ff4dcfd9135924d90bb822f2e23ae9cb2420

--- a/master/themes.html
+++ b/master/themes.html
@@ -400,6 +400,7 @@ over it and is merged into the default palette.</p>
 </ul>
 <table><thead><tr><th>Key</th><th>Notes</th></tr></thead><tbody>
 <tr><td><code>ui.background</code></td><td></td></tr>
+<tr><td><code>ui.background.separator</code></td><td>Picker separator below input line</td></tr>
 <tr><td><code>ui.cursor</code></td><td></td></tr>
 <tr><td><code>ui.cursor.insert</code></td><td></td></tr>
 <tr><td><code>ui.cursor.select</code></td><td></td></tr>
