--- a/master/print.html
+++ b/master/print.html
@@ -834,7 +834,7 @@ action itself (delete, change, yank, etc) comes second. A cursor is simply a
 single width selection.</p>
 <p>See also Kakoune's <a href="https://github.com/mawww/kakoune/wiki/Migrating-from-Vim">Migrating from Vim</a>.</p>
 <blockquote>
-<p>TODO: Mention texobjects, surround, registers</p>
+<p>TODO: Mention textobjects, surround, registers</p>
 </blockquote>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="configuration"><a class="header" href="#configuration">Configuration</a></h1>
 <p>To override global configuration parameters, create a <code>config.toml</code> file located in your config directory:</p>
