--- a/master/print.html
+++ b/master/print.html
@@ -306,6 +306,7 @@ will move the selection over to the &quot;func&quot; <code>identifier</code>.</p
 <tr><td><code>c</code></td><td>Class</td></tr>
 <tr><td><code>a</code></td><td>Argument/parameter</td></tr>
 <tr><td><code>o</code></td><td>Comment</td></tr>
+<tr><td><code>t</code></td><td>Test</td></tr>
 </tbody></table>
 <blockquote>
 <p>NOTE: <code>f</code>, <code>c</code>, etc need a tree-sitter grammar active for the current
@@ -571,6 +572,8 @@ and <a href="./usage.html#textobject">textobject</a> usage.</p>
 <tr><td><code>[a</code></td><td>Go to previous argument/parameter (<strong>TS</strong>)</td><td><code>goto_prev_parameter</code></td></tr>
 <tr><td><code>]o</code></td><td>Go to next comment (<strong>TS</strong>)</td><td><code>goto_next_comment</code></td></tr>
 <tr><td><code>[o</code></td><td>Go to previous comment (<strong>TS</strong>)</td><td><code>goto_prev_comment</code></td></tr>
+<tr><td><code>]t</code></td><td>Go to next test (<strong>TS</strong>)</td><td><code>goto_next_test</code></td></tr>
+<tr><td><code>]t</code></td><td>Go to previous test (<strong>TS</strong>)</td><td><code>goto_prev_test</code></td></tr>
 <tr><td><code>]p</code></td><td>Go to next paragraph</td><td><code>goto_next_paragraph</code></td></tr>
 <tr><td><code>[p</code></td><td>Go to previous paragraph</td><td><code>goto_prev_paragraph</code></td></tr>
 <tr><td><code>[space</code></td><td>Add newline above</td><td><code>add_newline_above</code></td></tr>
@@ -1477,6 +1480,8 @@ for example).</p>
 <tr><td><code>function.around</code></td></tr>
 <tr><td><code>class.inside</code></td></tr>
 <tr><td><code>class.around</code></td></tr>
+<tr><td><code>test.inside</code></td></tr>
+<tr><td><code>test.around</code></td></tr>
 <tr><td><code>parameter.inside</code></td></tr>
 <tr><td><code>comment.inside</code></td></tr>
 <tr><td><code>comment.around</code></td></tr>
