deploy: ba85779902877340d17f27dce1aeced98abfaeb6

--- a/master/keymap.html
+++ b/master/keymap.html
@@ -187,7 +187,7 @@
 <tr><td><code>A</code></td><td>Insert at the end of the line</td><td><code>append_to_line</code></td></tr>
 <tr><td><code>o</code></td><td>Open new line below selection</td><td><code>open_below</code></td></tr>
 <tr><td><code>O</code></td><td>Open new line above selection</td><td><code>open_above</code></td></tr>
-<tr><td><code>.</code></td><td>Repeat last change</td><td>N/A</td></tr>
+<tr><td><code>.</code></td><td>Repeat last insert</td><td>N/A</td></tr>
 <tr><td><code>u</code></td><td>Undo change</td><td><code>undo</code></td></tr>
 <tr><td><code>U</code></td><td>Redo change</td><td><code>redo</code></td></tr>
 <tr><td><code>Alt-u</code></td><td>Move backward in history</td><td><code>earlier</code></td></tr>
