deploy: a26943de4e421a453371aa53b3bb11a2baabff56

--- a/master/print.html
+++ b/master/print.html
@@ -1279,6 +1279,7 @@ over it and is merged into the default palette.</p>
 <tr><td><code>ui.virtual.indent-guide</code></td><td>Vertical indent width guides</td></tr>
 <tr><td><code>ui.menu</code></td><td>Code and command completion menus</td></tr>
 <tr><td><code>ui.menu.selected</code></td><td>Selected autocomplete item</td></tr>
+<tr><td><code>ui.menu.scroll</code></td><td><code>fg</code> sets thumb color, <code>bg</code> sets track color of scrollbar</td></tr>
 <tr><td><code>ui.selection</code></td><td>For selections in the editing area</td></tr>
 <tr><td><code>ui.selection.primary</code></td><td></td></tr>
 <tr><td><code>warning</code></td><td>Diagnostics warning (gutter)</td></tr>
