deploy: 64de0b7288036c5ad759e6ce2dfdef9d40d267ad

--- a/master/themes.html
+++ b/master/themes.html
@@ -426,6 +426,8 @@ over it and is merged into the default palette.</p>
 <tr><td><code>ui.menu.scroll</code></td><td><code>fg</code> sets thumb color, <code>bg</code> sets track color of scrollbar</td></tr>
 <tr><td><code>ui.selection</code></td><td>For selections in the editing area</td></tr>
 <tr><td><code>ui.selection.primary</code></td><td></td></tr>
+<tr><td><code>ui.cursorline.primary</code></td><td>The line of the primary cursor</td></tr>
+<tr><td><code>ui.cursorline.secondary</code></td><td>The lines of any other cursors</td></tr>
 <tr><td><code>warning</code></td><td>Diagnostics warning (gutter)</td></tr>
 <tr><td><code>error</code></td><td>Diagnostics error (gutter)</td></tr>
 <tr><td><code>info</code></td><td>Diagnostics info (gutter)</td></tr>
